@@ -1,3 +1,7 @@
+Mon May 31 12:21:03 CEST 2010 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: New buildPartition() method.
+
 Sun Nov 29 22:09:38 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos3d/Remesh.java
